<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/home_drawer"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/colorAccent"
            android:autoSizeTextType="uniform"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_8"
            android:layout_width="581dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_rounded"
            android:padding="15dp"
            android:text="@string/tourney8_btn"
            android:textColor="@color/colorAccent"
            android:autoSizeTextType="uniform"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:onClick="onClickTournoi8"/>

        <Button
            android:id="@+id/btn_16"
            android:layout_width="581dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_rounded"
            android:padding="15dp"
            android:text="@string/tourney16_btn"
            android:textColor="@color/colorAccent"
            android:autoSizeTextType="uniform"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:onClick="onClickTournoi16"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        app:itemTextColor="@color/colorSecondary"
        android:outlineAmbientShadowColor="@color/colorAccent"
        app:menu="@menu/menu_drawer_home"
        />


</androidx.drawerlayout.widget.DrawerLayout>