<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TournoiActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Round 1 - Quart de finale"
        android:textSize="50sp"
        android:layout_marginBottom="30dp"
        android:id="@+id/round"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/fruit1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:onClick="onClickImage" />


        <ImageView
            android:id="@+id/vs"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:src="@drawable/vs" />

        <ImageView
            android:id="@+id/fruit2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:onClick="onClickImage" />
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:text="Retour à l'accueil"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:onClick="onClickBoutonRetour"
        android:id="@+id/boutonRetour"/>

</LinearLayout>