<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:title="@string/home_btn"
            />
        <item
            android:id="@+id/menu_stats"
            android:title="@string/stats_btn"
            />
        <item
            android:id="@+id/menu_deco"
            android:title="@string/disconnect_btn"
            />

    </group>
</menu>